--- a/pos_kitchen_screen/views/pos_kitchen_display_view.xml
+++ b/pos_kitchen_screen/views/pos_kitchen_display_view.xml
@@ -34,11 +34,11 @@
         <field name="name">pos.kitchen.display.tree</field>
         <field name="model">pos.kitchen.display</field>
         <field name="arch" type="xml">
-            <tree string="Kitchen Displays">
+            <list string="Kitchen Displays">
                 <field name="name"/>
                 <field name="pos_config_ids" widget="many2many_tags"/>
                 <field name="pos_category_ids" widget="many2many_tags"/>
-            </tree>
+            </list>
         </field>
     </record>
 
