--- a/pos_kitchen_screen/views/pos_kitchen_display_view.xml
+++ b/pos_kitchen_screen/views/pos_kitchen_display_view.xml
@@ -25,6 +25,16 @@
                             </div>
                         </group>
                     </group>
+                    <group string="Alerts &amp; Notifications">
+                         <group>
+                             <field name="kitchen_sla_warning"/>
+                             <field name="kitchen_sla_critical"/>
+                         </group>
+                         <group>
+                             <field name="enable_sound_notifications"/>
+                         </group>
+                    </group>
+                    </group>
                 </sheet>
             </form>
         </field>
