--- a/pos_kitchen_screen/views/pos_kitchen_display_view.xml
+++ b/pos_kitchen_screen/views/pos_kitchen_display_view.xml
@@ -54,7 +54,7 @@
     <record id="action_pos_kitchen_display" model="ir.actions.act_window">
         <field name="name">Kitchen Displays</field>
         <field name="res_model">pos.kitchen.display</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
     </record>
 
     <menuitem id="menu_pos_kitchen_display"
