--- a/pos_kitchen_screen/views/kitchen_menu.xml
+++ b/pos_kitchen_screen/views/kitchen_menu.xml
@@ -4,7 +4,7 @@
     <record id="action_pos_kitchen_screen" model="ir.actions.client">
         <field name="name">Kitchen Screen</field>
         <field name="tag">pos_kitchen_screen.main_view</field>
-        <field name="target">fullscreen</field>
+        <field name="target">current</field>
     </record>
 
     <!-- Top Menu Root -->
